# HeroPolyGame

./: CMakeLists.txt  Doxyfile  Game.cpp  Game.h  Inn.cpp  README.md  a.out  heroGame  main.cpp
GameStates/: BattleSystem.cpp  BattleSystem.h  Inn.cpp  Inn.h
entity/: BadGuy.cpp  BadGuy.h  BadWarrior.cpp  BadWarrior.h  Entity.cpp  Entity.h  Hero.cpp  Hero.h
xml/: Doxyfile.xml
